# bevy_keybind_scrappy

./: Cargo.toml  README.md
examples/: basic.rs
keybind_scrappy_proc_macro/: Cargo.toml
keybind_scrappy_proc_macro/src/: key_macro.rs  lib.rs
src/: action.rs  key_macro.rs  keybind.rs  keybind_plugin.rs  lib.rs  prelude.rs
tests/: keybind.rs  parse_file.rs
tests/files/: file.json
